Refactoring creating pair object